feat: adjusting ExceptionHandler class